--- a/src/app/features/cart/cart.component.html
+++ b/src/app/features/cart/cart.component.html
@@ -1,2 +1,4 @@
-<p>Produktów w koszyku</p>
-<p>Suma zamówienia:</p>
+<div *ngIf="cart$ | async as cart">
+  <p>Produktów w koszyku: {{ cart.inCart }}</p>
+  <p>Suma zamówienia: {{ cart.toPay }}</p>
+</div>
