--- a/src/app/features/shop/shop.component.html
+++ b/src/app/features/shop/shop.component.html
@@ -14,7 +14,7 @@
 </nav>
 
 <div
-  *ngIf="product$ | async as product"
+  *ngIf="products$ | async as product"
   class="flex flex-wrap row-start-2 row-span-2 col-start-1 col-span-3"
 >
   <app-product-card
