displaying, adding and deleting products from cart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
-<header class="bg-amber-500 text-white flex justify-center">
-  <div class="container flex justify-between items-center py-4">
-    <h1 class="text-4xl">Restauracja</h1>
-    <p>Kosz</p>
-  </div>
-</header>
+<app-navbar></app-navbar>
 
 <main class="container mx-auto">
   <app-shop class="grid grid-cols-4 grid-rows-[80px_minmax(0,1fr)]"></app-shop>
