--- a/src/app/components/mini-card/mini-card.component.html
+++ b/src/app/components/mini-card/mini-card.component.html
@@ -1,26 +1,27 @@
 <div class="bg-black p-4 rounded my-2 text-white flex">
   <img src="{{ item.imgUrl }}" alt="{{ item.name }}" class="w-20" />
-  <div class="w-full text-center">
+  <div class="w-full flex flex-col items-center justify-between">
     <h4 class="font-bold uppercase">{{ item.name }}</h4>
 
-    <div class="flex justify-center" *ngIf="inStock$ | async as stock">
-      <button
-        class="bg-white text-black px-2 rounded"
-        (click)="changeInStockByOne(-1)"
-        [disabled]="stock.count <= 1"
-      >
-        -
-      </button>
-      <p class="mx-2">{{ stock.count }}</p>
-      <button
-        class="bg-white text-black px-2 rounded"
-        (click)="changeInStockByOne(1)"
-        [disabled]="stock.count >= item.inStock"
-      >
-        +
-      </button>
+    <div class="flex flex-col items-center" *ngIf="inStock$ | async as stock">
+      <div class="flex">
+        <button
+          class="bg-white text-black px-2 rounded"
+          (click)="changeInStockByOne(-1)"
+          [disabled]="stock.count <= 1"
+        >
+          -
+        </button>
+        <p class="mx-2">{{ stock.count }}</p>
+        <button
+          class="bg-white text-black px-2 rounded"
+          (click)="changeInStockByOne(1)"
+          [disabled]="stock.count >= item.inStock"
+        >
+          +
+        </button>
+      </div>
+      <button class="mt-2" (click)="onDelete(stock.count)">Delete</button>
     </div>
-
-    <button (click)="onDelete()">Delete</button>
   </div>
 </div>
