--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
 
 <main class="container mx-auto">
-  <app-shop class="grid grid-cols-4 grid-rows-[80px_minmax(0,1fr)]"></app-shop>
+  <app-shop class="grid grid-cols-4"></app-shop>
 </main>
