--- a/src/app/components/mini-card/mini-card.component.html
+++ b/src/app/components/mini-card/mini-card.component.html
@@ -21,7 +21,7 @@
           +
         </button>
       </div>
-      <button class="mt-2" (click)="onDelete(stock.count)">Delete</button>
+      <button class="mt-2" (click)="onDelete(-stock.count)">Delete</button>
     </div>
   </div>
 </div>
