--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<header class="bg-amber-500 text-white flex justify-center">
+<header class="bg-orange-500 text-white flex justify-center">
   <div class="container flex justify-between items-center py-4">
     <h1 class="text-4xl">Restauracja</h1>
     <p>Kosz</p>
