clear cart button

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <header class="bg-orange-500 text-white flex justify-center">
   <div class="container flex justify-between items-center py-4">
-    <h1 class="text-4xl">Restauracja</h1>
+    <h1 class="text-4xl">PGG</h1>
     <p>Kosz</p>
   </div>
 </header>
