--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,8 +1,10 @@
-<div class="w-64 p-4 rounded bg-black text-white my-1 mr-4">
-  <img [src]="item.imgUrl" alt="dsad" />
+<div
+  class="w-64 p-4 rounded bg-black text-white my-1 mr-4 flex flex-col items-center"
+>
+  <img [src]="item.imgUrl" alt="dsad" class="object-cover h-72" />
   <div class="flex flex-col items-center">
     <h4>{{ item.name }}</h4>
-    <p>{{ item.price }}zł</p>
+    <p>{{ item.price | currency: "PLN " }}</p>
     <p>{{ item.stars }} gwiazdki</p>
     <p>in stock: {{ item.inStock }}</p>
     <div *ngIf="item.inStock; else outOfStock">
