--- a/src/app/components/mini-card/mini-card.component.html
+++ b/src/app/components/mini-card/mini-card.component.html
@@ -1,7 +1,7 @@
 <div class="bg-black p-4 rounded my-2 text-white flex">
   <img src="{{ item.imgUrl }}" alt="{{ item.name }}" class="w-20" />
-  <div class="w-full flex flex-col items-center justify-between">
-    <h4 class="font-bold uppercase">{{ item.name }}</h4>
+  <div class="w-full flex flex-col items-center justify-between px-4">
+    <h4 class="font-bold uppercase text-center">{{ item.name }}</h4>
 
     <div class="flex flex-col items-center" *ngIf="inStock$ | async as stock">
       <div class="flex">
@@ -21,7 +21,13 @@
           +
         </button>
       </div>
-      <button class="mt-2" (click)="onDelete(-stock.count)">Delete</button>
+      <button
+        class="mt-2"
+        (click)="onDelete(-stock.count)"
+        class="bg-orange-500 p-1 mt-2 rounded"
+      >
+        Delete
+      </button>
     </div>
   </div>
 </div>
