--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -3,16 +3,16 @@
 >
   <img [src]="item.imgUrl" alt="dsad" class="object-cover h-72" />
   <div class="flex flex-col items-center">
-    <h4>{{ item.name }}</h4>
-    <p>{{ item.price | currency: "PLN " }}</p>
+    <h4 class="font-semibold capitalize">{{ item.name }}</h4>
+    <p class="font-medium">{{ item.price | currency: "PLN " }}</p>
     <p>{{ item.stars }} gwiazdki</p>
     <p>in stock: {{ item.inStock }}</p>
     <div *ngIf="item.inStock; else outOfStock">
-      <div class="flex">
+      <div class="flex justify-center">
         <button
           class="bg-white text-black px-2 rounded"
           (click)="onMinus()"
-          [disabled]="count <= 0"
+          [disabled]="count <= 1"
         >
           -
         </button>
@@ -25,10 +25,16 @@
           +
         </button>
       </div>
-      <button (click)="onAddToCard(item.id)" [disabled]="count <= 0">
+      <button
+        (click)="onAddToCard(item.id)"
+        [disabled]="count <= 0"
+        class="bg-orange-500 p-1 mt-2 rounded"
+      >
         Add to cart
       </button>
     </div>
-    <ng-template #outOfStock>Out of stock</ng-template>
+    <ng-template #outOfStock
+      ><p class="text-red-500">Out of stock</p>
+    </ng-template>
   </div>
 </div>
