--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-navbar></app-navbar>
 
-<main class="container mx-auto">
-  <app-shop class="grid grid-cols-4"></app-shop>
+<main class="container mx-auto grid grid-cols-4">
+  <app-shop
+    class="flex flex-wrap row-start-2 col-start-1 col-span-3"
+  ></app-shop>
+  <app-cart class="row-start-2 row-span-2 col-start-4"></app-cart>
 </main>
