--- a/src/app/features/shop/shop.component.html
+++ b/src/app/features/shop/shop.component.html
@@ -1,4 +1,4 @@
-<nav class="mt-2 col-start-1 col-end-2">
+<nav class="mt-2">
   <div class="flex">
     <button
       *ngFor="let enum of categories | keyvalue"
@@ -22,5 +22,3 @@
     [item]="item"
   ></app-product-card>
 </div>
-
-<app-cart class="row-start-2 row-span-2 col-start-4"></app-cart>
