--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-64 p-4 rounded bg-black text-white my-1 mr-4 flex flex-col items-center"
+  class="w-64 p-4 rounded bg-black text-white mb-2 mr-2 flex flex-col items-center"
 >
   <img [src]="item.imgUrl" alt="dsad" class="object-cover h-72" />
   <div class="flex flex-col items-center">
