--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,14 @@
 <header class="bg-orange-500 text-white flex justify-center">
   <div class="container flex justify-between items-center py-4">
     <h1 class="text-4xl">PGG</h1>
-    <p>Kosz</p>
+    <div class="relative">
+      <mat-icon>shopping_cart</mat-icon>
+      <p
+        *ngIf="cart$ | async as cart"
+        class="absolute -top-2 right-1 font-semibold text-black"
+      >
+        {{ cart.inCart }}
+      </p>
+    </div>
   </div>
 </header>
