--- a/src/app/features/cart/cart.component.html
+++ b/src/app/features/cart/cart.component.html
@@ -10,73 +10,46 @@
   </button>
 
   <div *ngIf="cart.inCart">
-    <div *ngFor="let enum of categories | keyvalue">
-      <p *ngIf="enum">{{ enum.key }}</p>
+    <div *ngIf="showProductsByCategories$ | async as categories">
+      <div *ngFor="let category of categories">
+        <p>
+          {{ category }}
+        </p>
 
-      <div *ngFor="let item of cart.products">
-        <app-mini-card
-          *ngIf="enum.key == item.category"
-          [item]="item"
-        ></app-mini-card>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- <div *ngIf="cart.inCart">
-    <div *ngIf="test$ | async as products">
-      <div
-        *ngFor="let enum of categories | keyvalue; let i = index"
-        class="flex flex-col"
-      >
-        <div *ngFor="let item of products">
-          <ng-container [ngSwitch]="item.category">
-            <ng-container *ngSwitchCase="enum.key">
-              {{ enum.key }}
-            </ng-container>
-          </ng-container>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-<!-- <div *ngIf="cart.inCart">
-    <div *ngIf="cart.products as products">
-      <div
-        *ngFor="let enum of categories | keyvalue; let i = index"
-        class="flex flex-col"
-      >
-        <div *ngFor="let item of products">
+        <div *ngFor="let item of cart.products">
           <app-mini-card
-            *ngIf="enum.key == item.category"
+            *ngIf="category == item.category"
             [item]="item"
           ></app-mini-card>
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
-<!-- Need to change this -->
-<!-- <div *ngIf="snails$ | async as product">
-  <app-mini-card *ngFor="let item of product" [item]="item"></app-mini-card>
+  <button
+    *ngIf="cart.inCart != 0"
+    class="bg-black text-white p-3 rounded w-full my-4"
+    (click)="onClearCart(cart.productsInCart)"
+  >
+    Złóż zamówienie
+  </button>
 </div>
 
-<div *ngIf="baguettes$ | async as product">
-  <app-mini-card *ngFor="let item of product" [item]="item"></app-mini-card>
-</div>
-
-<div *ngIf="frogs$ | async as product">
-  <app-mini-card *ngFor="let item of product" [item]="item"></app-mini-card>
-</div> -->
-
-<!-- <div *ngFor="let enum of categories | keyvalue" class="flex flex-col">
-  <div *ngIf="test$ | async as products">
-    <div *ngFor="let product of products">
-      <div *ngIf="product.category == enum.key">
-        {{ enum.key }}
-        <app-mini-card [item]="product"></app-mini-card>
+<!-- <div *ngIf="cart.inCart">
+  <div *ngFor="let enum of categories | keyvalue">
+    <div *ngIf="test2$ | async as test">
+      <div *ngFor="let enum2 of test">
+        <p *ngIf="enum.key.includes(enum2)">
+          {{ enum.key }}
+        </p>
       </div>
     </div>
+
+    <div *ngFor="let item of cart.products">
+      <app-mini-card
+        *ngIf="enum.key == item.category"
+        [item]="item"
+      ></app-mini-card>
+    </div>
   </div>
-</div>
- -->
+</div> -->
