--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         *ngIf="cart$ | async as cart"
         class="absolute -top-2 right-1 font-semibold text-black"
       >
-        {{ cart.inCart }}
+        {{ cart }}
       </p>
     </div>
   </div>
