--- a/src/app/utilities/notify/components/notify.component.html
+++ b/src/app/utilities/notify/components/notify.component.html
@@ -1,5 +1,1 @@
-<div
-  class="row-start-1 col-start-3 bg-black m-2 rounded text-white flex justify-center items-center"
->
-  <p>notify works!</p>
-</div>
+<p>{{ message }}</p>
