--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-navbar></app-navbar>
-
-<main class="container mx-auto">
-  <app-shop class="grid grid-cols-4"></app-shop>
+<!-- <main class="container mx-auto">
+  <router-outlet></router-outlet>
 </main>
+ -->
+
+<router-outlet></router-outlet>
