--- a/src/app/features/cart/cart.component.html
+++ b/src/app/features/cart/cart.component.html
@@ -29,27 +29,8 @@
   <button
     *ngIf="cart.inCart != 0"
     class="bg-black text-white p-3 rounded w-full my-4"
-    (click)="onClearCart(cart.productsInCart)"
+    (click)="onOrderComplete()"
   >
     Złóż zamówienie
   </button>
 </div>
-
-<!-- <div *ngIf="cart.inCart">
-  <div *ngFor="let enum of categories | keyvalue">
-    <div *ngIf="test2$ | async as test">
-      <div *ngFor="let enum2 of test">
-        <p *ngIf="enum.key.includes(enum2)">
-          {{ enum.key }}
-        </p>
-      </div>
-    </div>
-
-    <div *ngFor="let item of cart.products">
-      <app-mini-card
-        *ngIf="enum.key == item.category"
-        [item]="item"
-      ></app-mini-card>
-    </div>
-  </div>
-</div> -->
