--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <header class="bg-orange-500 text-white flex justify-center">
-  <div class="container flex justify-between items-center py-4">
+  <div class="container flex justify-between items-center p-4">
     <h1 class="text-4xl">PGG</h1>
     <div class="relative">
       <mat-icon>shopping_cart</mat-icon>
