--- a/src/app/features/order/order.component.scss
+++ b/src/app/features/order/order.component.scss
@@ -1,108 +1,3 @@
-h2 {
-  text-transform: uppercase;
-  padding: 0px;
-  margin: 0px;
-}
-
-h2::first-letter {
-  font-size: 1.5em;
-}
-
-.container {
-  width: 100%;
-  margin: 0 auto;
-  position: relative;
-  padding: 0px;
-  height: 100vh;
-  vertical-align: top;
-  max-width: 940px;
-}
-
-.container::before {
-  content: " ";
-  background: #d41318;
-  width: 100%;
-  height: 100vh;
-  position: absolute;
-  z-index: -1;
-  left: calc(100% - 10px);
-  overflow: hidden;
-}
-
-.div1 {
-  /* width: calc(40vw - 60px); */
-  max-width: 300px;
-  display: inline-block;
-  color: #d41318;
-  padding: 140px 15px 0 15px;
-  text-align: center;
-  vertical-align: top;
-  width: 100%;
-  height: calc(100vh - 140px);
-}
-
-.div2 {
-  width: 100%;
-  font-size: 1.4em;
-  line-height: 1.5em;
-  vertical-align: top;
-  text-align: center;
-  display: inline-block;
-  /* width: calc(60vw - 100px); */
-  max-width: calc(600px - 100px);
-  background-color: #d41318;
-  color: white;
-  padding: 80px 50px 0 50px;
+.test {
   clip-path: polygon(70px 0, 100% 0, 100% 100%, 0 100%);
-  margin-top: 0px;
-  height: calc(100vh - 80px);
-}
-
-@media only screen and (max-width: 950px) {
-  .container {
-    width: 100%;
-    max-width: none;
-  }
-  .div1 {
-    display: block;
-    height: auto;
-    max-width: none;
-    width: 100%;
-
-    padding: 20px;
-  }
-
-  .container::before {
-    content: "";
-    width: 0;
-    height: 0;
-    left: 0;
-    top: 0;
-  }
-
-  body {
-    overflow-y: auto;
-  }
-
-  .div2 {
-    font-size: 1em;
-    padding: 50px 20px;
-    display: block;
-    height: auto;
-    max-width: none;
-    width: 100%;
-    clip-path: polygon(0 70px, 100% 0, 100% 100%, 0 100%);
-  }
-}
-
-.txt {
-  vertical-align: middle;
-}
-
-.small {
-  font-size: 0.8em;
-}
-
-.big {
-  font-size: 1.5em;
 }
